fix(icons): restored icon selection-checkbox-marked-circle #1735

--- a/libs/icons/base/src/styles/icons-base/prizm-base-icons.scss
+++ b/libs/icons/base/src/styles/icons-base/prizm-base-icons.scss
@@ -806,125 +806,126 @@ $prizm-base-icons-map: (
   'temp-selection-checkbox-blank-circle': '\f417',
   'temp-selection-checkbox-blank': '\f418',
   'temp-selection-checkbox-marked-circle-chanel': '\f419',
-  'temp-selection-checked-1': '\f41a',
-  'temp-selection-checked-2': '\f41b',
-  'temp-selection-checked': '\f41c',
-  'temp-selection-radio-off': '\f41d',
-  'temp-selection-radio-on': '\f41e',
-  'temp-selection-toggle-left': '\f41f',
-  'temp-selection-toggle-right': '\f420',
-  'temp-selection-unchoice': '\f421',
-  'temp-shapes-checkbox-intermediate': '\f422',
-  'temp-signal-cast': '\f423',
-  'temp-signal-rss-box': '\f424',
-  'temp-social-tab': '\f425',
-  'temp-sort-version': '\f426',
-  'temp-tools-solver': '\f427',
-  'temperature-minus': '\f428',
-  'temperature-plus': '\f429',
-  'temperature': '\f42a',
-  'template': '\f42b',
-  'text-color': '\f42c',
-  'text': '\f42d',
-  'thumb-down': '\f42e',
-  'thumb-up': '\f42f',
-  'thumbtack-directly': '\f430',
-  'thumbtack': '\f431',
-  'tools-solver': '\f432',
-  'touchpad': '\f433',
-  'train-cargo': '\f434',
-  'train-passenger': '\f435',
-  'transmitter': '\f436',
-  'trash-drop': '\f437',
-  'trash-empty': '\f438',
-  'trash': '\f439',
-  'triangle-circle-square-fill': '\f43a',
-  'triangle-circle-square': '\f43b',
-  'triangle-cross-empty': '\f43c',
-  'triangle-down': '\f43d',
-  'triangle-exclamation-empty': '\f43e',
-  'triangle-exclamation-fill': '\f43f',
-  'triangle-fill': '\f440',
-  'triangle-info-empty': '\f441',
-  'triangle-info-fill': '\f442',
-  'triangle-left': '\f443',
-  'triangle-plus-empty': '\f444',
-  'triangle-right': '\f445',
-  'triangle-up-down': '\f446',
-  'triangle-up': '\f447',
-  'triangle': '\f448',
-  'truck-dump-side-view': '\f449',
-  'truck-empty-side-view': '\f44a',
-  'truck-garbage-side-view': '\f44b',
-  'truck-gasoline-side-view': '\f44c',
-  'truck-side-view': '\f44d',
-  'tv': '\f44e',
-  'umbrella': '\f44f',
-  'underlined': '\f450',
-  'unlock': '\f451',
-  'user-arrows-swap': '\f452',
-  'user-card': '\f453',
-  'user-check': '\f454',
-  'user-chevron': '\f455',
-  'user-circle': '\f456',
-  'user-cross': '\f457',
-  'user-gear': '\f458',
-  'user-group': '\f459',
-  'user-location': '\f45a',
-  'user-minus': '\f45b',
-  'user-pen': '\f45c',
-  'user-plus': '\f45d',
-  'user-shield': '\f45e',
-  'user-worker': '\f45f',
-  'user': '\f460',
-  'users-arrow-right': '\f461',
-  'users-arrow-up-zql': '\f462',
-  'users-gear': '\f463',
-  'users-key': '\f464',
-  'users-location': '\f465',
-  'users-minus': '\f466',
-  'users-plus': '\f467',
-  'users': '\f468',
-  'vector-circle-one-point': '\f469',
-  'vector-circle-two-point': '\f46a',
-  'vector-circle': '\f46b',
-  'vector-line': '\f46c',
-  'vector-point': '\f46d',
-  'vector-polygon': '\f46e',
-  'vector-rectangle': '\f46f',
-  'vector-square': '\f470',
-  'vector-triangle': '\f471',
-  'vectors-radius': '\f472',
-  'vial-arrow-rotate-left': '\f473',
-  'vial-flask': '\f474',
-  'vial-plus': '\f475',
-  'vial-rotate-left': '\f476',
-  'vial-xmark': '\f477',
-  'vial': '\f478',
-  'video-cross': '\f479',
-  'video-slash': '\f47a',
-  'video': '\f47b',
-  'voicemail': '\f47c',
-  'volume-cross': '\f47d',
-  'volume-low': '\f47e',
-  'volume-minus': '\f47f',
-  'volume-off': '\f480',
-  'volume-plus': '\f481',
-  'volume-slash': '\f482',
-  'volume': '\f483',
-  'wallet': '\f484',
-  'watch': '\f485',
-  'water-heater': '\f486',
-  'water-pump': '\f487',
-  'webcam': '\f488',
-  'wifi-off': '\f489',
-  'wifi': '\f48a',
-  'window': '\f48b',
-  'wrench': '\f48c',
-  'xmark-column-right': '\f48d',
-  'xmark-column-top': '\f48e',
-  'xmark-mini': '\f48f',
-  'xmark': '\f490',
+  'temp-selection-checkbox-marked-circle': '\f41a',
+  'temp-selection-checked-1': '\f41b',
+  'temp-selection-checked-2': '\f41c',
+  'temp-selection-checked': '\f41d',
+  'temp-selection-radio-off': '\f41e',
+  'temp-selection-radio-on': '\f41f',
+  'temp-selection-toggle-left': '\f420',
+  'temp-selection-toggle-right': '\f421',
+  'temp-selection-unchoice': '\f422',
+  'temp-shapes-checkbox-intermediate': '\f423',
+  'temp-signal-cast': '\f424',
+  'temp-signal-rss-box': '\f425',
+  'temp-social-tab': '\f426',
+  'temp-sort-version': '\f427',
+  'temp-tools-solver': '\f428',
+  'temperature-minus': '\f429',
+  'temperature-plus': '\f42a',
+  'temperature': '\f42b',
+  'template': '\f42c',
+  'text-color': '\f42d',
+  'text': '\f42e',
+  'thumb-down': '\f42f',
+  'thumb-up': '\f430',
+  'thumbtack-directly': '\f431',
+  'thumbtack': '\f432',
+  'tools-solver': '\f433',
+  'touchpad': '\f434',
+  'train-cargo': '\f435',
+  'train-passenger': '\f436',
+  'transmitter': '\f437',
+  'trash-drop': '\f438',
+  'trash-empty': '\f439',
+  'trash': '\f43a',
+  'triangle-circle-square-fill': '\f43b',
+  'triangle-circle-square': '\f43c',
+  'triangle-cross-empty': '\f43d',
+  'triangle-down': '\f43e',
+  'triangle-exclamation-empty': '\f43f',
+  'triangle-exclamation-fill': '\f440',
+  'triangle-fill': '\f441',
+  'triangle-info-empty': '\f442',
+  'triangle-info-fill': '\f443',
+  'triangle-left': '\f444',
+  'triangle-plus-empty': '\f445',
+  'triangle-right': '\f446',
+  'triangle-up-down': '\f447',
+  'triangle-up': '\f448',
+  'triangle': '\f449',
+  'truck-dump-side-view': '\f44a',
+  'truck-empty-side-view': '\f44b',
+  'truck-garbage-side-view': '\f44c',
+  'truck-gasoline-side-view': '\f44d',
+  'truck-side-view': '\f44e',
+  'tv': '\f44f',
+  'umbrella': '\f450',
+  'underlined': '\f451',
+  'unlock': '\f452',
+  'user-arrows-swap': '\f453',
+  'user-card': '\f454',
+  'user-check': '\f455',
+  'user-chevron': '\f456',
+  'user-circle': '\f457',
+  'user-cross': '\f458',
+  'user-gear': '\f459',
+  'user-group': '\f45a',
+  'user-location': '\f45b',
+  'user-minus': '\f45c',
+  'user-pen': '\f45d',
+  'user-plus': '\f45e',
+  'user-shield': '\f45f',
+  'user-worker': '\f460',
+  'user': '\f461',
+  'users-arrow-right': '\f462',
+  'users-arrow-up-zql': '\f463',
+  'users-gear': '\f464',
+  'users-key': '\f465',
+  'users-location': '\f466',
+  'users-minus': '\f467',
+  'users-plus': '\f468',
+  'users': '\f469',
+  'vector-circle-one-point': '\f46a',
+  'vector-circle-two-point': '\f46b',
+  'vector-circle': '\f46c',
+  'vector-line': '\f46d',
+  'vector-point': '\f46e',
+  'vector-polygon': '\f46f',
+  'vector-rectangle': '\f470',
+  'vector-square': '\f471',
+  'vector-triangle': '\f472',
+  'vectors-radius': '\f473',
+  'vial-arrow-rotate-left': '\f474',
+  'vial-flask': '\f475',
+  'vial-plus': '\f476',
+  'vial-rotate-left': '\f477',
+  'vial-xmark': '\f478',
+  'vial': '\f479',
+  'video-cross': '\f47a',
+  'video-slash': '\f47b',
+  'video': '\f47c',
+  'voicemail': '\f47d',
+  'volume-cross': '\f47e',
+  'volume-low': '\f47f',
+  'volume-minus': '\f480',
+  'volume-off': '\f481',
+  'volume-plus': '\f482',
+  'volume-slash': '\f483',
+  'volume': '\f484',
+  'wallet': '\f485',
+  'watch': '\f486',
+  'water-heater': '\f487',
+  'water-pump': '\f488',
+  'webcam': '\f489',
+  'wifi-off': '\f48a',
+  'wifi': '\f48b',
+  'window': '\f48c',
+  'wrench': '\f48d',
+  'xmark-column-right': '\f48e',
+  'xmark-column-top': '\f48f',
+  'xmark-mini': '\f490',
+  'xmark': '\f491',
 );
 
 .prizm-base-icons-agenda-fill:before {
@@ -3305,6 +3306,9 @@ $prizm-base-icons-map: (
 }
 .prizm-base-icons-temp-selection-checkbox-marked-circle-chanel:before {
   content: map-get($prizm-base-icons-map, 'temp-selection-checkbox-marked-circle-chanel');
+}
+.prizm-base-icons-temp-selection-checkbox-marked-circle:before {
+  content: map-get($prizm-base-icons-map, 'temp-selection-checkbox-marked-circle');
 }
 .prizm-base-icons-temp-selection-checked-1:before {
   content: map-get($prizm-base-icons-map, 'temp-selection-checked-1');
