fix(doc/textarea): missing border property added for textarea livedemo #1803

--- a/apps/doc/src/app/components/input/textarea/textarea-example.component.html
+++ b/apps/doc/src/app/components/input/textarea/textarea-example.component.html
@@ -22,6 +22,7 @@
         [label]="label"
         [size]="size"
         [outer]="outer"
+        [border]="border"
         [ngStyle]="{ width }"
         [status]="status"
         [position]="inputPosition"
