fix(components/chips): hihint appears in multiselect after deletion #1815

--- a/libs/components/src/lib/components/chips/chips-item/chips-item.component.html
+++ b/libs/components/src/lib/components/chips/chips-item/chips-item.component.html
@@ -6,7 +6,7 @@
     [prizmHintHost]="el.nativeElement"
     [prizmHintDirection]="hintDirection"
     [prizmHintCanShow]="
-      $any(!!hintText && (div | prizmCallFunc : prizmIsTextOverflow$ : hintCanShow : null | async))
+      (!!hintText && (div | prizmCallFunc : prizmIsTextOverflow$ : hintCanShow : false : hintText | async))!
     "
   >
     <ng-content></ng-content>
