--- a/libs/components/src/lib/components/input/common/input-icon-button/input-icon-button.component.less
+++ b/libs/components/src/lib/components/input/common/input-icon-button/input-icon-button.component.less
@@ -3,6 +3,7 @@
   position: relative;
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-shrink: 0;
   border: 0;
   padding: 0;
