feat(doc/multiselect): add example for async items in multiselect #1754

--- a/apps/doc/src/app/components/input/input-multi-select/input-multi-select.component.html
+++ b/apps/doc/src/app/components/input/input-multi-select/input-multi-select.component.html
@@ -10,6 +10,10 @@
       <prizm-multi-select-base-example></prizm-multi-select-base-example>
     </prizm-doc-example>
 
+    <prizm-doc-example id="async" [content]="exampleAsync" heading="Async">
+      <prizm-multi-select-async-example></prizm-multi-select-async-example>
+    </prizm-doc-example>
+
     <prizm-doc-example id="with-search" [content]="exampleWithSearch" heading="With Search">
       <prizm-multi-select-with-search-example></prizm-multi-select-with-search-example>
     </prizm-doc-example>
