--- a/apps/doc/src/app/components/slider/slider.component.html
+++ b/apps/doc/src/app/components/slider/slider.component.html
@@ -40,7 +40,7 @@
       </prizm-slider>
     </prizm-doc-demo>
 
-    <prizm-doc-documentation>
+    <prizm-doc-documentation [control]="fc">
       <ng-template
         [(documentationPropertyValue)]="min"
         documentationPropertyName="min"
