fix(components/switcher): add async example for issue #1476

--- a/apps/doc/src/app/components/switcher/switcher-example.component.html
+++ b/apps/doc/src/app/components/switcher/switcher-example.component.html
@@ -7,6 +7,10 @@
       <prizm-switcher-basic-example></prizm-switcher-basic-example>
     </prizm-doc-example>
 
+    <prizm-doc-example id="async" [content]="exampleAsyncSwitcher" heading="Async">
+      <prizm-switcher-async-example></prizm-switcher-async-example>
+    </prizm-doc-example>
+
     <prizm-doc-example id="innerL" [content]="exampleInnerLSwitcher" heading="Type inner, size L">
       <prizm-switcher-inner-l-example></prizm-switcher-inner-l-example>
     </prizm-doc-example>
