feat(components/paginator): update paginator dictionary #1840

--- a/apps/doc/src/app/components/paginator/examples/paginator-with-labels-example/paginator-with-labels-example.component.html
+++ b/apps/doc/src/app/components/paginator/examples/paginator-with-labels-example/paginator-with-labels-example.component.html
@@ -6,6 +6,6 @@
   [page]="6"
   [paginatorOptions]="{ noRowsSelectorLabel: true }"
   [rowsCountOptions]="[10, 20, 60]"
-  leftButtonLabel="Назад"
-  rightButtonLabel="Вперед"
+  [leftButtonLabel]="({ russian: 'Назад' } | prizmLang : 'Back' | async)!"
+  [rightButtonLabel]="({ russian: 'Вперед' } | prizmLang : 'Forward' | async)!"
 ></prizm-paginator>
