fix(doc/date-time): beautify date-time examples #1315

--- a/apps/doc/src/app/components/input/input-layout-date-time/examples/base-transformer/input-layout-date-time-base-transformer-example.component.html
+++ b/apps/doc/src/app/components/input/input-layout-date-time/examples/base-transformer/input-layout-date-time-base-transformer-example.component.html
@@ -6,5 +6,5 @@
 </div>
 
 <br />
-<button (click)="setDefaultValue()">Set default value</button>
-<button (click)="clear()">Clear</button>
+<button (click)="setDefaultValue()" prizmButton>Set default value</button>
+<button (click)="clear()" prizmButton>Clear</button>
