--- a/apps/doc/src/app/components/input/input-layout-date-time/examples/base/input-layout-date-time-base-example.component.html
+++ b/apps/doc/src/app/components/input/input-layout-date-time/examples/base/input-layout-date-time-base-example.component.html
@@ -7,5 +7,5 @@
 </prizm-input-layout>
 
 <br />
-<button (click)="setDefaultValue()">Set default value</button>
-<button (click)="clear()">Clear</button>
+<button (click)="setDefaultValue()" prizmButton>Set default value</button>
+<button (click)="clear()" prizmButton>Clear</button>
