feat(components/input-date): add test for min-max transformation util and error handling #1573

--- a/apps/doc/src/app/components/input/input-layout-date-time/input-layout-date-time.component.html
+++ b/apps/doc/src/app/components/input/input-layout-date-time/input-layout-date-time.component.html
@@ -88,6 +88,7 @@
       </ng-template>
 
       <ng-template
+        [(documentationPropertyValue)]="min"
         [documentationPropertyValues]="minMaxVariants"
         documentationPropertyName="min"
         documentationPropertyType="PrizmDay | [PrizmDay, PrizmTime] | Date | string"
@@ -97,6 +98,7 @@
       </ng-template>
 
       <ng-template
+        [(documentationPropertyValue)]="max"
         [documentationPropertyValues]="minMaxVariants"
         documentationPropertyName="max"
         documentationPropertyType="PrizmDay | [PrizmDay, PrizmTime] | Date | string"
