--- a/apps/doc/src/app/components/input/input-layout-date/input-layout-date.component.html
+++ b/apps/doc/src/app/components/input/input-layout-date/input-layout-date.component.html
@@ -35,6 +35,8 @@
           [prizmDocHostElementKey]="dateKey"
           [formControl]="control"
           [placeholder]="placeholder"
+          [min]="min"
+          [max]="max"
         >
         </prizm-input-layout-date>
       </prizm-input-layout>
@@ -64,16 +66,20 @@
       </ng-template>
 
       <ng-template
+        [(documentationPropertyValue)]="min"
+        [documentationPropertyValues]="minMaxVariants"
         documentationPropertyName="min"
-        documentationPropertyType="PrizmDay | [PrizmDay, PrizmTime]"
+        documentationPropertyType="PrizmDay | Date | string"
         documentationPropertyMode="input"
       >
         Min Date
       </ng-template>
 
       <ng-template
+        [(documentationPropertyValue)]="max"
+        [documentationPropertyValues]="minMaxVariants"
         documentationPropertyName="max"
-        documentationPropertyType="PrizmDay | [PrizmDay, PrizmTime]"
+        documentationPropertyType="PrizmDay | Date | string"
         documentationPropertyMode="input"
       >
         Max Date
