--- a/libs/components/src/lib/components/input/input-date-range/input-layout-date-range.component.html
+++ b/libs/components/src/lib/components/input/input-date-range/input-layout-date-range.component.html
@@ -63,8 +63,8 @@
       [defaultViewedMonth]="defaultViewedMonth"
       [disabledItemHandler]="disabledItemHandler"
       [items]="items"
-      [min]="min"
-      [max]="max"
+      [min]="_min"
+      [max]="_max"
       [markerHandler]="markerHandler"
       [minLength]="minLength"
       [maxLength]="maxLength"
