--- a/apps/doc/src/app/components/input/input-layout-date-range/examples/native-date/input-layout-native-date-range-base-example.component.html
+++ b/apps/doc/src/app/components/input/input-layout-date-range/examples/native-date/input-layout-native-date-range-base-example.component.html
@@ -1,8 +1,14 @@
 <prizm-input-layout label="Выберите период">
-  <prizm-input-layout-date-range [formControl]="value"></prizm-input-layout-date-range>
+  <prizm-input-layout-date-range
+    [formControl]="value"
+    [min]="min"
+    [max]="max"
+  ></prizm-input-layout-date-range>
 </prizm-input-layout>
 
 <div *ngIf="value.value as value">
   <div><b>start</b>: {{ value?.[0] && (value[0] | date : 'shortDate') }}</div>
   <div><b>end</b>: {{ value?.[1] && (value[1] | date : 'shortDate') }}</div>
+  <div><b>min:</b>: {{ min | date : 'short' }}</div>
+  <div><b>max:</b>: {{ max | date : 'short' }}</div>
 </div>
