feat(components/cron): add native date support for cron #1315

--- a/apps/doc/src/app/components/cron/cron.component.html
+++ b/apps/doc/src/app/components/cron/cron.component.html
@@ -23,6 +23,10 @@
       <prizm-cron-reset-example></prizm-cron-reset-example>
     </prizm-doc-example>
 
+    <prizm-doc-example id="native-date" [content]="nativeDate" heading="Native date">
+      <prizm-cron-native-date-example></prizm-cron-native-date-example>
+    </prizm-doc-example>
+
     <prizm-doc-example id="" [content]="exampleI18n" heading="i18n">
       <prizm-cron-i18n-example></prizm-cron-i18n-example>
     </prizm-doc-example>
