--- a/libs/components/src/lib/components/tree/components/tree-item-content/tree-item-content.component.less
+++ b/libs/components/src/lib/components/tree/components/tree-item-content/tree-item-content.component.less
@@ -3,6 +3,9 @@
 :host {
   display: flex;
   align-items: center;
+  &:not(:empty) {
+    height: 32px;
+  }
 
   :host-context(prizm-tree-item._expandable):not(._expandable) {
     padding-left: 28px;
