feat(charts/line): add color input for line #1816

--- a/apps/doc/src/app/charts/line/examples/series/prizm-charts-line-series-example.component.html
+++ b/apps/doc/src/app/charts/line/examples/series/prizm-charts-line-series-example.component.html
@@ -6,4 +6,5 @@
   [yField]="'value'"
   [options]="{ smooth: true }"
   [seriesField]="'city'"
+  [color]="['#00bffb', '#f400b1']"
 ></prizm-charts-line>
