feat(charts/area): replace PrizmChartsAriaOptions(deprecated now) by PrizmChartsAreaOptions #000

--- a/apps/doc/src/app/charts/area/area.component.html
+++ b/apps/doc/src/app/charts/area/area.component.html
@@ -79,7 +79,7 @@
       <ng-template
         documentationPropertyName="options"
         documentationPropertyMode="input"
-        documentationPropertyType="PrizmChartsAriaOptions"
+        documentationPropertyType="PrizmChartsAreaOptions"
       >
         Options
       </ng-template>
