feat(charts/column): add color unput for column #1816

--- a/apps/doc/src/app/charts/area/area.component.html
+++ b/apps/doc/src/app/charts/area/area.component.html
@@ -98,7 +98,7 @@
         documentationPropertyType="string"
         documentationPropertyMode="input"
       >
-        Color. Sets color to line. Note, for chart with seriesField use colors array.
+        Color. Sets charts color. Note, for chart with seriesField use colors array.
       </ng-template>
     </prizm-doc-documentation>
   </ng-template>
