--- a/apps/doc/src/app/charts/column/examples/stack/prizm-charts-column-stack-example.component.html
+++ b/apps/doc/src/app/charts/column/examples/stack/prizm-charts-column-stack-example.component.html
@@ -6,6 +6,7 @@
   [seriesField]="seriesField"
   [options]="options"
   [theme]="$any(prizmTheme.changesTheme$ | async)"
+  [color]="['#ffe599', '#93c47d']"
   xField="product_type"
   yField="order_amt"
   seriesField="product_sub_type"
