--- a/apps/doc/src/app/charts/column/column.component.html
+++ b/apps/doc/src/app/charts/column/column.component.html
@@ -32,6 +32,7 @@
         [groupField]="groupField"
         [seriesField]="seriesField"
         [yField]="yField"
+        [color]="color"
       >
       </prizm-charts-column>
     </prizm-doc-demo>
@@ -121,82 +122,14 @@
       >
         Group Field
       </ng-template>
-
-      <!--      <ng-template-->
-      <!--        documentationPropertyName="ng-content"-->
-      <!--        documentationPropertyType="string"-->
-      <!--        [(documentationPropertyValue)]="content"-->
-      <!--      >-->
-      <!--        NgContent-->
-      <!--      </ng-template>-->
-
-      <!--      <ng-template-->
-      <!--        documentationPropertyName="size"-->
-      <!--        documentationPropertyType="PrizmSize"-->
-      <!--        documentationPropertyMode="input"-->
-      <!--        [documentationPropertyValues]="sizeVariants"-->
-      <!--        [(documentationPropertyValue)]="size"-->
-      <!--      >-->
-      <!--        Size-->
-      <!--      </ng-template>-->
-
-      <!--      <ng-template-->
-      <!--        documentationPropertyName="appearance"-->
-      <!--        documentationPropertyType="PrizmAppearance"-->
-      <!--        documentationPropertyMode="input"-->
-      <!--        [documentationPropertyValues]="appearanceVariants"-->
-      <!--        [(documentationPropertyValue)]="appearance"-->
-      <!--      >-->
-      <!--        Appearance-->
-      <!--      </ng-template>-->
-
-      <!--      <ng-template-->
-      <!--        documentationPropertyName="appearanceType"-->
-      <!--        documentationPropertyType="PrizmAppearanceType"-->
-      <!--        documentationPropertyMode="input"-->
-      <!--        [documentationPropertyValues]="appearanceTypeVariants"-->
-      <!--        [(documentationPropertyValue)]="appearanceType"-->
-      <!--      >-->
-      <!--        AppearanceType-->
-      <!--      </ng-template>-->
-
-      <!--      <ng-template-->
-      <!--        documentationPropertyName="icon"-->
-      <!--        documentationPropertyType="PrizmContent"-->
-      <!--        documentationPropertyMode="input"-->
-      <!--        [documentationPropertyValues]="iconVariants"-->
-      <!--        [(documentationPropertyValue)]="icon"-->
-      <!--      >-->
-      <!--        Icon-->
-      <!--      </ng-template>-->
-
-      <!--      <ng-template-->
-      <!--        documentationPropertyName="iconRight"-->
-      <!--        documentationPropertyType="PrizmContent"-->
-      <!--        documentationPropertyMode="input"-->
-      <!--        [documentationPropertyValues]="iconVariants"-->
-      <!--        [(documentationPropertyValue)]="iconRight"-->
-      <!--      >-->
-      <!--        Right Icon-->
-      <!--      </ng-template>-->
-
-      <!--      <ng-template-->
-      <!--        documentationPropertyName="disabled"-->
-      <!--        documentationPropertyType="boolean"-->
-      <!--        documentationPropertyMode="input"-->
-      <!--        [(documentationPropertyValue)]="disabled"-->
-      <!--      >-->
-      <!--        Disabled-->
-      <!--      </ng-template>-->
-
-      <!--      <ng-template-->
-      <!--        documentationPropertyName="showLoader"-->
-      <!--        documentationPropertyType="boolean"-->
-      <!--        documentationPropertyMode="input"-->
-      <!--        [(documentationPropertyValue)]="showLoader"-->
-      <!--      >-->
-      <!--        Show Loader-->
-      <!--      </ng-template>-->
+      <ng-template
+        [(documentationPropertyValue)]="color"
+        documentationPropertyName="color"
+        documentationPropertyType="string"
+        documentationPropertyMode="input"
+      >
+        Color. Sets charts color. Note, for chart with seriesField use colors array.
+      </ng-template>
     </prizm-doc-documentation>
   </ng-template>
 
