--- a/apps/doc/src/app/charts/radar/radar.component.html
+++ b/apps/doc/src/app/charts/radar/radar.component.html
@@ -22,6 +22,7 @@
         [theme]="$any(prizmTheme.changesTheme$ | async)"
         [yField]="yField"
         [options]="options"
+        [color]="color"
       ></prizm-charts-radar>
     </prizm-doc-demo>
     <prizm-doc-documentation>
@@ -91,6 +92,14 @@
         documentationPropertyType="PrizmChartsRadarItem[]"
       >
         Data
+      </ng-template>
+      <ng-template
+        [(documentationPropertyValue)]="color"
+        documentationPropertyName="color"
+        documentationPropertyType="string"
+        documentationPropertyMode="input"
+      >
+        Color. Sets charts color. Note, for chart with seriesField use colors array.
       </ng-template>
     </prizm-doc-documentation>
   </ng-template>
