--- a/apps/doc/src/app/charts/radial-bar/radial-bar.component.html
+++ b/apps/doc/src/app/charts/radial-bar/radial-bar.component.html
@@ -20,6 +20,7 @@
         [width]="width"
         [yField]="yField"
         [options]="options"
+        [color]="color"
       ></prizm-charts-radial-bar>
     </prizm-doc-demo>
     <prizm-doc-documentation>
@@ -89,6 +90,14 @@
         documentationPropertyMode="input"
       >
         Y Field Name
+      </ng-template>
+      <ng-template
+        [(documentationPropertyValue)]="color"
+        documentationPropertyName="color"
+        documentationPropertyType="string"
+        documentationPropertyMode="input"
+      >
+        Color. Sets charts color. Note, for chart with seriesField use colors array.
       </ng-template>
     </prizm-doc-documentation>
   </ng-template>
