feat(charts/treemap): add color input for treemap #1816

--- a/apps/doc/src/app/charts/treemap/treemap.component.html
+++ b/apps/doc/src/app/charts/treemap/treemap.component.html
@@ -19,6 +19,7 @@
         [height]="height"
         [colorField]="colorField"
         [theme]="$any($any(prizmTheme.changesTheme$ | async))"
+        [color]="color"
       ></prizm-charts-treemap>
     </prizm-doc-demo>
     <prizm-doc-documentation>
@@ -72,6 +73,15 @@
         documentationPropertyMode="input"
       >
         Data
+      </ng-template>
+      <ng-template
+        [(documentationPropertyValue)]="color"
+        [documentationPropertyValues]="$any(colorVariants)"
+        documentationPropertyName="color"
+        documentationPropertyType="string"
+        documentationPropertyMode="input"
+      >
+        Color. Sets charts color. Note, for chart with seriesField use colors array.
       </ng-template>
     </prizm-doc-documentation>
   </ng-template>
