feat(doc/input-layout-date): add example for new date provider #000

--- a/apps/doc/src/app/components/input/input-layout-date/input-layout-date.component.html
+++ b/apps/doc/src/app/components/input/input-layout-date/input-layout-date.component.html
@@ -12,6 +12,14 @@
     <prizm-doc-example id="native-date" [content]="exampleNative" heading="Native Date">
       <prizm-input-native-date-base-example></prizm-input-native-date-base-example>
     </prizm-doc-example>
+
+    <prizm-doc-example
+      id="date-provider"
+      [content]="exampleDateProvider"
+      heading="Provider for Native Date and ISO or UTC date strings"
+    >
+      <prizm-input-date-provider-example></prizm-input-date-provider-example>
+    </prizm-doc-example>
   </ng-template>
 
   <ng-template prizmDocPageTab prizmDocHost>
