--- a/apps/doc/src/app/components/input/input-chips/input-chips-example.component.html
+++ b/apps/doc/src/app/components/input/input-chips/input-chips-example.component.html
@@ -42,6 +42,7 @@
           <prizm-input-layout label="Заголовок" size="l" status="default">
             <input
               [disabled]="control.disabled"
+              [formControl]="controlText"
               (enter)="onEnter($event)"
               prizmInput
               placeholder="Введите название"
@@ -150,7 +151,7 @@
     </prizm-doc-documentation>
 
     <prizm-doc-documentation
-      [control]="control"
+      [control]="controlText"
       [hasTestId]="true"
       heading="PrizmChipsComponent"
       hostComponentKey="PrizmChipsComponent"
