fix(chore): cherry-pick all commits #000

--- a/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.html
+++ b/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.html
@@ -21,6 +21,7 @@
     [placeholder]="placeholder"
     [ngModelOptions]="{ standalone: true }"
     [ngModel]="($any(value) | prizmCallFunc : stringify) ?? ''"
+    (blur)="onTouch()"
     prizmInput
   />
 
@@ -30,6 +31,7 @@
       *prizmLet="{ filteredItems: filteredItems$ | async } as $"
       [scroll]="dropdownScroll"
       [style.--prizm-data-list-border]="0"
+      (prizmOnDestroy)="onTouch()"
     >
       <div class="list-search-item" *ngIf="searchable">
         <!-- TODO remove default text value in 4.0, bc #dr -->
