fix(components/input): refactor select, multi-select and fixed with update value #1190

--- a/apps/doc/src/app/components/input/input-chips/input-chips-example.component.html
+++ b/apps/doc/src/app/components/input/input-chips/input-chips-example.component.html
@@ -26,7 +26,7 @@
             [hintCanShow]="hintCanShow"
             [prizmDocHostElement]="chipsItem"
             [selected]="selected"
-            [style.--prizm-chips-item-height]="prizmChipsItemHeight"
+            [style.--prizm-chips-item-heigh]="prizmChipsItemHeight"
             [style.--prizm-chips-item-background]="prizmChipsItemBackground"
             [style.--prizm-chips-item-color]="prizmChipsItemColor"
             style="width: 100px"
@@ -41,6 +41,7 @@
         <div>
           <prizm-input-layout label="Заголовок" size="l" status="default">
             <input
+              [disabled]="control.disabled"
               [formControl]="controlText"
               (enter)="onEnter($event)"
               prizmInput
@@ -65,7 +66,7 @@
     <prizm-doc-documentation heading="PrizmChipsItemComponent" hostComponentKey="PrizmChipsItemComponent">
       <ng-template
         [(documentationPropertyValue)]="prizmChipsItemHeight"
-        documentationPropertyName="prizm-chips-item-height"
+        documentationPropertyName="prizm-chips-item-heigh"
         documentationPropertyType="string"
         documentationPropertyMode="css-var"
       >
@@ -150,7 +151,7 @@
     </prizm-doc-documentation>
 
     <prizm-doc-documentation
-      [control]="controlText"
+      [control]="control"
       [hasTestId]="true"
       heading="PrizmChipsComponent"
       hostComponentKey="PrizmChipsComponent"
