--- a/libs/components/src/lib/components/dropdowns/select/input-select.component.html
+++ b/libs/components/src/lib/components/dropdowns/select/input-select.component.html
@@ -8,6 +8,7 @@
     [prizmDropdownHostWidth]="dropdownWidth"
     [prizmDropdownMinHeight]="minDropdownHeight"
     [prizmDropdownMaxHeight]="maxDropdownHeight"
+    [autoReposition]="false"
     [dropdownStyles]="dropdownStyles"
     [dropdownClasses]="dropdownClasses"
     (isOpenChange)="opened$$.next($event)"
