--- a/apps/doc/src/app/components/input/input-multi-select/input-multi-select.component.html
+++ b/apps/doc/src/app/components/input/input-multi-select/input-multi-select.component.html
@@ -53,6 +53,7 @@
           [searchable]="searchable"
           [dropdownScroll]="dropdownScroll"
           [placeholder]="placeholder"
+          [dropdownAutoReposition]="autoReposition"
           [emptyContent]="emptyContent"
           [isChipsDeletable]="isChipsDeletable"
           [dropdownStyles]="dropdownStyles"
@@ -74,6 +75,15 @@
       [hostComponentKey]="selectKey"
       [control]="valueControl"
     >
+      <ng-template
+        [(documentationPropertyValue)]="autoReposition"
+        documentationPropertyName="dropdownAutoReposition"
+        documentationPropertyType="boolean"
+        documentationPropertyMode="input"
+      >
+        Dropdown Auto Reposition
+      </ng-template>
+
       <ng-template
         documentationPropertyName="transformer"
         documentationPropertyType="PrizmMultiSelectValueTransformer"
