--- a/apps/doc/src/app/components/input/input-select/input-select.component.html
+++ b/apps/doc/src/app/components/input/input-select/input-select.component.html
@@ -87,6 +87,7 @@
           [listItemTemplate]="listItemTemplate"
           [searchMatcher]="searchMatcher"
           [formControl]="control"
+          [dropdownAutoReposition]="autoReposition"
           [searchable]="searchable"
           [dropdownStyles]="dropdownStyles"
           [dropdownClasses]="dropdownClasses"
@@ -298,6 +299,15 @@
         documentationPropertyMode="input"
       >
         Empty Content
+      </ng-template>
+
+      <ng-template
+        [(documentationPropertyValue)]="autoReposition"
+        documentationPropertyName="dropdownAutoReposition"
+        documentationPropertyType="boolean"
+        documentationPropertyMode="input"
+      >
+        Dropdown Auto Reposition
       </ng-template>
 
       <ng-template
