feat(components/hint): stage 1 #830

--- a/apps/doc/src/app/components/hint/examples/base/hint-base-example.component.html
+++ b/apps/doc/src/app/components/hint/examples/base/hint-base-example.component.html
@@ -1,16 +1,1 @@
-<button
-  [prizmHintShowDelay]="500"
-  [prizmHintHideDelay]="5000"
-  [prizmHint]="hintText"
-  type="button"
-  prizmButton
->
-  Button
-</button>
-
-<div>
-  <p>Update Value</p>
-  <button (click)="amount = amount + 1" type="button" prizmButton appearance="success">
-    Update Hint Text
-  </button>
-</div>
+<button [prizmHint]="hintText" (click)="amount = amount + 1" type="button" prizmButton>Increase Hint</button>
