feat(components/paginator): add left direction support #1154

--- a/libs/components/src/lib/components/paginator/paginator.component.less
+++ b/libs/components/src/lib/components/paginator/paginator.component.less
@@ -92,4 +92,18 @@
       }
     }
   }
+
+  &.direction-left {
+    .container {
+      flex-direction: row-reverse;
+
+      .content:has(.rows__show) {
+        flex-direction: row-reverse;
+      }
+
+      .rows-selector {
+        margin-right: 0;
+      }
+    }
+  }
 }
