fix(components/hint): re-draw after change context #000

--- a/apps/doc/src/app/components/hint/examples/base/hint-base-example.component.html
+++ b/apps/doc/src/app/components/hint/examples/base/hint-base-example.component.html
@@ -2,6 +2,7 @@
   [prizmHintShowDelay]="500"
   [prizmHintHideDelay]="5000"
   [prizmHint]="hintText"
+  (click)="amount = amount + 1"
   type="button"
   prizmButton
 >
